--- a/simlane/templates/core/contact.html
+++ b/simlane/templates/core/contact.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block title %}
-  About SimLane
+  Contact - SimLane
 {% endblock title %}
 {% block content %}
-  {% include "pages/about_content_partial.html" %}
+  {% include "core/contact_content_partial.html" %}
 {% endblock content %}
