--- a/simlane/templates/core/home.html
+++ b/simlane/templates/core/home.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
-{% load i18n %}
-
 {% block title %}
-  Privacy Policy - {{ block.super }}
+  SimLane - Your Simracing Companion
 {% endblock title %}
 {% block content %}
-  {% include "pages/privacy_content_partial.html" %}
+  {% include "core/home_content_partial.html" %}
 {% endblock content %}
