--- a/simlane/templates/core/privacy.html
+++ b/simlane/templates/core/privacy.html
@@ -3,8 +3,8 @@
 {% load i18n %}
 
 {% block title %}
-  Contact Us - {{ block.super }}
+  Privacy Policy - SimLane
 {% endblock title %}
 {% block content %}
-  {% include "pages/contact_content_partial.html" %}
+  {% include "core/privacy_content_partial.html" %}
 {% endblock content %}
