--- a/simlane/templates/core/terms.html
+++ b/simlane/templates/core/terms.html
@@ -3,8 +3,8 @@
 {% load i18n %}
 
 {% block title %}
-  Terms of Service - {{ block.super }}
+  Terms of Service - SimLane
 {% endblock title %}
 {% block content %}
-  {% include "pages/terms_content_partial.html" %}
+  {% include "core/terms_content_partial.html" %}
 {% endblock content %}
