--- a/simlane/templates/socialaccount/login.html
+++ b/simlane/templates/socialaccount/login.html
@@ -1,22 +1,38 @@
-{% extends "socialaccount/login.html" %}
+{% extends "allauth/layouts/entrance.html" %}
 
 {% load i18n %}
-{% load allauth_ui %}
+{% load static %}
 {% load allauth %}
 
-{% block content %}
+{% block head_title_inner %}
   {% if process == "connect" %}
-    {% blocktrans asvar heading with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}
-    {% blocktrans asvar subheading with provider.name as provider %}You are about to connect a new third-party account from {{ provider }}.{% endblocktrans %}
+    {% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}
   {% else %}
-    {% blocktrans asvar heading with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}
-    {% blocktrans asvar subheading with provider.name as provider %}You are about to sign in using a third-party account from {{ provider }}.{% endblocktrans %}
+    {% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}
   {% endif %}
-  {% #container heading=heading subheading=subheading %}
-  {% trans "Continue" as button_text %}
-  {% #form button_text=button_text %}
-  {% csrf_token %}
-  {{ redirect_field }}
-  {% /form %}
-  {% /container %}
-{% endblock content %}
+{% endblock head_title_inner %}
+{% block inner_content %}
+  <div class="mb-6">
+    <p class="text-sm text-gray-600 text-center">
+      {% if process == "connect" %}
+        {% blocktrans with provider.name as provider %}You are about to connect a new third-party account from {{ provider }}.{% endblocktrans %}
+      {% else %}
+        {% blocktrans with provider.name as provider %}You are about to sign in using a third-party account from {{ provider }}.{% endblocktrans %}
+      {% endif %}
+    </p>
+  </div>
+  <form method="post" class="space-y-6">
+    {% csrf_token %}
+    {{ redirect_field }}
+    <div>
+      <button type="submit"
+              class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+        {% trans "Continue" %}
+      </button>
+    </div>
+  </form>
+  <div class="mt-4 text-center">
+    <a href="{% url 'account_login' %}"
+       class="text-sm text-primary-600 hover:text-primary-500">{% trans "Back to Sign In" %}</a>
+  </div>
+{% endblock inner_content %}
