--- a/simlane/templates/allauth/layouts/entrance.html
+++ b/simlane/templates/allauth/layouts/entrance.html
@@ -3,17 +3,33 @@
 {% load i18n %}
 
 {% block bodyclass %}
-  bg-light
+  bg-gray-50 min-h-screen flex flex-col
 {% endblock bodyclass %}
-{% block css %}
-  {{ block.super }}
-{% endblock css %}
 {% block title %}
   {% block head_title %}
     {% trans "Sign In" %}
   {% endblock head_title %}
 {% endblock title %}
 {% block content %}
-{% endblock content %}
-{% block extra_body %}
-{% endblock extra_body %}
+  <div class="min-h-screen bg-gray-50 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-md">
+      <div class="flex justify-center">
+        <img src="{% load static %}
+           {% static 'images/logo.svg' %}" alt="SimLane" class="h-12" />
+        </div>
+        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+          {% block head_title_inner %}
+            {% trans "Sign In" %}
+          {% endblock head_title_inner %}
+        </h2>
+      </div>
+      <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+        <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+          {% block inner_content %}
+          {% endblock inner_content %}
+        </div>
+      </div>
+    </div>
+  {% endblock content %}
+  {% block extra_body %}
+  {% endblock extra_body %}
