--- a/simlane/templates/core/about.html
+++ b/simlane/templates/core/about.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block title %}
-  SimLane - Your Simracing Companion
+  About - SimLane
 {% endblock title %}
 {% block content %}
-  {% include "pages/home_content_partial.html" %}
+  {% include "core/about_content_partial.html" %}
 {% endblock content %}
