--- a/simlane/templates/mfa/totp/deactivate_form.html
+++ b/simlane/templates/mfa/totp/deactivate_form.html
@@ -1,16 +1,50 @@
-{% extends "mfa/totp/deactivate_form.html" %}
+{% extends "allauth/layouts/manage.html" %}
 
 {% load i18n %}
-{% load allauth_ui %}
+{% load static %}
 
-{% block content %}
-  {% trans "Deactivate Authenticator App" as heading %}
-  {% blocktranslate asvar subheading %}You are about to deactivate authenticator app based authentication. Are you sure?{% endblocktranslate %}
-  {% #container heading=heading subheading=subheading %}
-  {% url 'mfa_deactivate_totp' as action_url %}
-  {% #form form=form url=action_url button_text=button_text use_default_button="false" %}
-  {% csrf_token %}
-  <button type="submit" class="btn btn-warning">{% trans "Deactivate" %}</button>
-  {% /form %}
-  {% /container %}
-{% endblock content %}
+{% block head_title_inner %}
+  {% trans "Deactivate Authenticator App" %}
+{% endblock head_title_inner %}
+{% block inner_content %}
+  <div class="mb-6">
+    <div class="rounded-md bg-yellow-50 p-4">
+      <div class="flex">
+        <svg class="h-5 w-5 text-yellow-400"
+             fill="none"
+             stroke="currentColor"
+             viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L3.732 16.5c-.77.833.192 2.5 1.732 2.5z" />
+        </svg>
+        <div class="ml-3">
+          <h3 class="text-sm font-medium text-yellow-800">{% trans "Warning" %}</h3>
+          <div class="mt-2 text-sm text-yellow-700">
+            <p>{% trans "You are about to deactivate authenticator app based authentication. Are you sure?" %}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <form method="post"
+        action="{% url 'mfa_deactivate_totp' %}"
+        class="space-y-6">
+    {% csrf_token %}
+    <!-- Action Buttons -->
+    <div class="flex justify-end space-x-3">
+      <a href="{% url 'mfa_index' %}"
+         class="inline-flex justify-center py-2 px-4 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+        {% trans "Cancel" %}
+      </a>
+      <button type="submit"
+              class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
+        <svg class="w-4 h-4 mr-2"
+             fill="none"
+             stroke="currentColor"
+             viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+        </svg>
+        {% trans "Deactivate" %}
+      </button>
+    </div>
+  </form>
+{% endblock inner_content %}
